--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
