--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "flatpickr": "^4.6.13",
     "framer-motion": "^12.18.1",
     "jsonwebtoken": "^9.0.2",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.522.0",
     "next": "15.2.3",
     "next-scratchcard": "^0.0.4",
